# ChangeLog for media-sound/teamspeak2-server-bin
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/teamspeak2-server-bin/Attic/ChangeLog,v 1.11 2004/07/07 22:44:20 eradicator Exp $

  07 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  teamspeak2-server-bin-2.0.20.1.ebuild:
  -* for non x86 archs

  30 May 2004; Jeremy Huddleston <eradicator@gentoo.org>
  teamspeak2-server-bin-2.0.20.1.ebuild:
  Stable x86.

  28 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  teamspeak2-server-bin-2.0.20.1.ebuild:
  Removed second IUSE line.

  20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  teamspeak2-server-bin-2.0.19.40.ebuild,
  teamspeak2-server-bin-2.0.20.1.ebuild:
  QA fix.

  20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  teamspeak2-server-bin-2.0.20.1.ebuild:
  Fixed init script source filename.

*teamspeak2-server-bin-2.0.20.1 (20 Apr 2004)

  20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  teamspeak2-server-bin-2.0.20.1.ebuild, files/teamspeak2-server.rc6:
  Version bump.  Closes bug #47758.  Thanks Dustin Parr <parr@cs.utk.edu>.

  01 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  teamspeak2-server-bin-2.0.19.40.ebuild:
  Stable on x86.

*teamspeak2-server-bin-2.0.19.40 (27 Sep 2003)

  27 Sep 2003; jje <jje@gentoo.org> teamspeak2-server-bin-2.0.19.40.ebuild:
  Initial revision. Still not sure that all of the file locations are correct, putting this out for review.

  Submitted by: Jeremy Johnson <jeremy@ic.ucsb.edu>