@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/teamspeak2-server-bin/Attic/teamspeak2-server-bin-2.0.20.1.ebuild,v 1.7 2004/07/07 22:44:20 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/teamspeak2-server-bin/Attic/teamspeak2-server-bin-2.0.20.1.ebuild,v 1.8 2004/07/09 10:48:15 eradicator Exp $
 
 inherit eutils
 
@@ -10,10 +10,13 @@ SRC_URI="ftp://webpost.teamspeak.org/releases/ts2_server_rc2_${PV//./}.tar.bz2"
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="-* x86"
+KEYWORDS="-* x86 ~amd64"
 IUSE="mysql"
 
 S=${WORKDIR}/tss2_rc2
+
+RDEPEND="amd64? ( app-emulation/emul-linux-x86-baselibs )"
+DEPEND=""
 
 pkg_setup() {
 	enewuser teamspeak2
