@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/teamspeak2-server-bin
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/teamspeak2-server-bin/Attic/ChangeLog,v 1.11 2004/07/07 22:44:20 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/teamspeak2-server-bin/Attic/ChangeLog,v 1.12 2004/07/09 10:48:15 eradicator Exp $
+
+  09 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  teamspeak2-server-bin-2.0.20.1.ebuild:
+  ~amd64 added
 
   07 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
   teamspeak2-server-bin-2.0.20.1.ebuild:
